--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "author": "Your Name",
+  "author": "Mashkura",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
